--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button id="back-button" class="hidden">❮</button>
             <h1 id="series-title" class="show">Séries</h1>
             <h1 id="series-name" class="hidden"></h1>
-            <h1 id="series-logs" class="hidden">Lista de Logs</h1>
+            <h1 id="series-logs" class="hidden">Lista de Histórico</h1>
             <label class="menu">
                 <input class="inp" type="checkbox" />
                 <div class="bar">
@@ -56,7 +56,7 @@
                 </div>
                 <section class="menu-container">
                     <div class="menu-list">Início</div>
-                    <div class="menu-list">Logs</div>
+                    <div class="menu-list">Histórico</div>
                 </section>
             </label>
         </div>
