--- a/index.html
+++ b/index.html
@@ -148,13 +148,8 @@
                 </div>
                 <button id="close-overlay-button"><span>✕</span></button>
                 <iframe id="video-iframe" src="" frameborder="0" allowfullscreen allow="autoplay"></iframe>
-                <button id="prev-video-button"> ❮
-                    <span class="tooltip-text tooltip-top">Anterior</span>
-                </button>
-
-                <button id="next-video-button"> ❯
-                    <span class="tooltip-text tooltip-top">Próximo</span>
-                </button>
+                <button id="prev-video-button"> ❮</button>
+                <button id="next-video-button"> ❯</button>
             </div>
         </div>
     </div>
