--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         </div>
     </div>
 
-    <script src="resources/scripts.js"></script>
+    <!-- <script src="resources/scripts.js"></script> -->
+    <script type="module" src="resources/scripts.js"></script>
 </body>
 </html>
