Update: Adicionado enabled nas descriptions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="resources/carrousel.css">
     <link rel="stylesheet" href="resources/styles.css">
     <link rel="stylesheet" href="resources/mobile.css">
+    <meta name="referrer" content="no-referrer">
 </head>
 <body>
     
