Update: Adicionado novas variaveis e sistema de thumb
Adicionado variaveis de visible para os botões e grupos
Adicionado sistema de hover vídeo (TEST)

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         </div>
     </div>
 
+    <!-- <script src="resources/scripts.js"></script> -->
     <script type="module" src="resources/scripts.js"></script>
 </body>
 </html>
