Update: A vida de Jó (novos episódios)

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
     </div>
 
-    <!-- <script src="resources/scripts.js"></script> -->
+    <script src="resources/scripts.js"></script>
     <script type="module" src="resources/scripts.js"></script>
 </body>
 </html>
