--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="resources/resolution.css">
     <link rel="stylesheet" href="resources/loading.css">
     <meta name="referrer" content="no-referrer">
+    <!-- <link rel="stylesheet" href="resources/color/ruined.css"> -->
+    <!-- <link rel="stylesheet" href="resources/color/default.css"> -->
 </head>
 <body>
 
